--- a/predictions/templates/predictions/predictions.html
+++ b/predictions/templates/predictions/predictions.html
@@ -647,7 +647,7 @@
                             <a href="{% url 'predictions:matches_list' %}" class="nav-link-custom">Matches</a>
                             <a href="{% url 'predictions:predictions' %}" class="nav-link-custom active">Predictions</a>
                             <a href="{% url 'predictions:config' %}" class="nav-link-custom">Config</a>
-                            <span class="user-badge"><i class="fa-solid fa-user"></i> {{ user.username }}</span>
+                            <span class="user-badge">{{ user.username }}</span>
                             <a href="{% url 'predictions:logout' %}" class="logout-btn">Logout</a>
                         </div>
                     </div>
